// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollSection should render its default content 1`] = `
<div
  id="scrollable-wrapper"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "flex": "1 1 auto",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "backgroundImage": "linear-gradient(to right, rgba(202, 203, 204, 0), rgba(202, 203, 204, 1))",
        "height": "100%",
        "position": "absolute",
        "right": 0,
        "width": "20px",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundImage": "linear-gradient(to left, rgba(202, 203, 204, 0), rgba(202, 203, 204, 1))",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "width": "20px",
      }
    }
  />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  />
</div>
`;

exports[`ScrollSection should render the given cells 1`] = `
<div
  id="scrollable-wrapper"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  style={
    Object {
      "flex": "1 1 auto",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "backgroundImage": "linear-gradient(to right, rgba(202, 203, 204, 0), rgba(202, 203, 204, 1))",
        "height": "100%",
        "position": "absolute",
        "right": 0,
        "width": "20px",
      }
    }
  />
  <div
    style={
      Object {
        "backgroundImage": "linear-gradient(to left, rgba(202, 203, 204, 0), rgba(202, 203, 204, 1))",
        "height": "100%",
        "left": 0,
        "position": "absolute",
        "width": "20px",
      }
    }
  />
  <Scrollbars
    autoHeight={false}
    autoHeightMax={200}
    autoHeightMin={0}
    autoHide={false}
    autoHideDuration={200}
    autoHideTimeout={1000}
    hideTracksWhenNotNeeded={false}
    onScroll={[Function]}
    renderThumbHorizontal={[Function]}
    renderThumbVertical={[Function]}
    renderTrackHorizontal={[Function]}
    renderTrackVertical={[Function]}
    renderView={[Function]}
    tagName="div"
    thumbMinSize={30}
    universal={false}
  >
    <div
      key="0"
    >
      Cell A
    </div>
    <div
      key="1"
    >
      Cell B
    </div>
    <div
      key="2"
    >
      Cell C
    </div>
  </Scrollbars>
</div>
`;
